@@ -14,13 +14,15 @@
 #include "gnc-ui-util.h"
 #include "gnc-engine-util.h"
 #include "option-util.h"
+#include "gnc-general-search.h"
 
 #include "dialog-options.h"
 #include "business-options.h"
 #include "business-utils.h"
+#include "dialog-invoice.h"
 
 static int
-owner_changed_cb (GtkWidget *widget, gpointer data)
+option_changed_cb (GtkWidget *widget, gpointer data)
 {
   GNCOption *option = data;
 
@@ -56,7 +58,7 @@ create_owner_widget (GNCOption *option, GncOwnerType type, GtkWidget *hbox)
   gnc_option_set_widget (option, widget);
 
   gtk_signal_connect (GTK_OBJECT (widget), "changed", 
-		      GTK_SIGNAL_FUNC (owner_changed_cb), option);
+		      GTK_SIGNAL_FUNC (option_changed_cb), option);
 
   return widget;
 }
@@ -276,6 +278,79 @@ vendor_get_value (GNCOption *option, GtkWidget *widget)
 				gh_eval_str("<gnc:GncVendor*>"));
 }
 
+/********************************************************************/
+/* "Invoice" Option functions */
+
+
+static GtkWidget *
+create_invoice_widget (GNCOption *option, GtkWidget *hbox)
+{
+  GtkWidget *widget;
+
+  widget = gnc_general_search_new (GNC_INVOICE_MODULE_NAME,
+				   _("Select..."),
+				   gnc_invoice_search_select,
+				   gnc_get_current_book ());
+
+  gtk_box_pack_start (GTK_BOX (hbox), widget, FALSE, FALSE, 0);
+  gnc_option_set_widget (option, widget);
+  gtk_signal_connect (GTK_OBJECT (widget), "changed", 
+		      GTK_SIGNAL_FUNC (option_changed_cb), option);
+
+  return widget;
+}
+
+/* Function to set the UI widget based upon the option */
+static GtkWidget *
+invoice_set_widget (GNCOption *option, GtkBox *page_box,
+		     GtkTooltips *tooltips,
+		     char *name, char *documentation,
+		     /* Return values */
+		     GtkWidget **enclosing, gboolean *packed)
+{
+  GtkWidget *value;
+  GtkWidget *label;
+
+  *enclosing = gtk_hbox_new (FALSE, 5);
+  label = make_name_label (name);
+  gtk_box_pack_start (GTK_BOX (*enclosing), label, FALSE, FALSE, 0);
+
+  value = create_invoice_widget (option, *enclosing);
+
+  gnc_option_set_ui_value (option, FALSE);
+
+  gtk_widget_show_all (*enclosing);
+  return value;
+}
+
+/* Function to set the UI Value for a particular option */
+static gboolean
+invoice_set_value (GNCOption *option, gboolean use_default,
+		    GtkWidget *widget, SCM value)
+{
+  GncInvoice *invoice;
+
+  if (!gw_wcp_p (value))
+    scm_misc_error("business_options:invoice_set_value",
+		   "Item is not a gw:wcp.", value);
+
+  invoice = gw_wcp_get_ptr (value);
+
+  widget = gnc_option_get_widget (option);
+  gnc_general_search_set_selected (GNC_GENERAL_SEARCH (widget), invoice);
+  return FALSE;
+}
+
+/* Function to get the UI Value for a particular option */
+static SCM
+invoice_get_value (GNCOption *option, GtkWidget *widget)
+{
+  GncInvoice *invoice;
+
+  invoice = gnc_general_search_get_selected (GNC_GENERAL_SEARCH (widget));
+  return gw_wcp_assimilate_ptr (invoice, gh_eval_str("<gnc:GncInvoice*>"));
+}
+
 
 
 
@@ -288,6 +363,7 @@ gnc_business_options_initialize (void)
     { "customer", customer_set_widget, customer_set_value,
       customer_get_value },
     { "vendor", vendor_set_widget, vendor_set_value, vendor_get_value },
+    { "invoice", invoice_set_widget, invoice_set_value, invoice_get_value },
     { NULL }
   };
 
